--- a/ionicbooks/src/app/login/login.page.html
+++ b/ionicbooks/src/app/login/login.page.html
@@ -1,9 +1,26 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="sign" padding>
+  <div ion-fixed padding class="appForm" margin-bottom style="position: absolute !important;top:0%;bottom: 0%;left:0;margin-bottom: 1% !important; height: auto !important">
+    <div class="logo">
+      <img src="http://placehold.it/50x50">
+    </div>
+    <ion-list style="margin-top: 43% !important;">
+      <ion-item style="position: relative !important;">
+        <ion-icon name="ios-mail-outline" item-left></ion-icon>
+        <ion-input class="inpt-field" style=" font-size: 18px !important" type="email" placeholder="Email" clearInput></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="ios-lock-outline" item-left></ion-icon>
+        <ion-input type="password" placeholder="Password" clearInput></ion-input>
+      </ion-item>
 
-<ion-content>
+      <button ion-button block class="login-button" margin-vertical>Sign In</button>
 
+      <p class="signup">
+        <button ion-button clear color="color3">
+          Sign Up
+        </button>
+      </p>
+    </ion-list>
+
+  </div>
 </ion-content>
