--- a/ionicbooks/src/app/register/register.page.html
+++ b/ionicbooks/src/app/register/register.page.html
@@ -4,6 +4,31 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="sign" padding>
+  <div ion-fixed padding class="appForm" margin-bottom
+    style="position: absolute !important;top:0%;bottom: 0%;left:0;margin-bottom: 1% !important; height: auto !important">
+    <div class="logo">
+      <img src="http://placehold.it/50x50">
+    </div>
+    <ion-list style="margin-top: 43% !important;">
+      <ion-item style="position: relative !important;">
+        <ion-icon name="ios-mail-outline" item-left></ion-icon>
+        <ion-input class="inpt-field" style=" font-size: 18px !important" type="text" placeholder="Username" clearInput>
+        </ion-input>
+      </ion-item>
+      <ion-item style="position: relative !important;">
+        <ion-icon name="ios-mail-outline" item-left></ion-icon>
+        <ion-input class="inpt-field" style=" font-size: 18px !important" type="email" placeholder="Email" clearInput>
+        </ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="ios-lock-outline" item-left></ion-icon>
+        <ion-input type="password" placeholder="Password" clearInput></ion-input>
+      </ion-item>
+
+      <button ion-button block class="login-button" margin-vertical (click)="signUp()">Sign In</button>
+    </ion-list>
+
+  </div>
 
 </ion-content>
