--- a/ionicbooks/src/app/register/register.page.html
+++ b/ionicbooks/src/app/register/register.page.html
@@ -10,24 +10,24 @@
     <div class="logo">
       <img src="http://placehold.it/50x50">
     </div>
-    <ion-list style="margin-top: 43% !important;">
+    <form [formGroup]="form" class="register" (submit)="signUp()">
       <ion-item style="position: relative !important;">
         <ion-icon name="ios-mail-outline" item-left></ion-icon>
-        <ion-input class="inpt-field" style=" font-size: 18px !important" type="text" placeholder="Username" clearInput>
+        <ion-input class="inpt-field" style=" font-size: 18px !important" type="text" formControlName="username" placeholder="Username" clearInput>
         </ion-input>
       </ion-item>
       <ion-item style="position: relative !important;">
         <ion-icon name="ios-mail-outline" item-left></ion-icon>
-        <ion-input class="inpt-field" style=" font-size: 18px !important" type="email" placeholder="Email" clearInput>
+        <ion-input class="inpt-field" style=" font-size: 18px !important" type="email" formControlName="email" placeholder="Email" clearInput>
         </ion-input>
       </ion-item>
       <ion-item>
         <ion-icon name="ios-lock-outline" item-left></ion-icon>
-        <ion-input type="password" placeholder="Password" clearInput></ion-input>
+        <ion-input type="password" formControlName="password" placeholder="Password" clearInput></ion-input>
       </ion-item>
 
       <button ion-button block class="login-button" margin-vertical (click)="signUp()">Sign In</button>
-    </ion-list>
+    </form>
 
   </div>
 
