functions added to home page

--- a/ionicbooks/src/app/home/home.page.html
+++ b/ionicbooks/src/app/home/home.page.html
@@ -7,14 +7,18 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!-- <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Home</ion-title>
-    </ion-toolbar>
-  </ion-header> -->
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="homepage">
+    <div class="books-section">
+        <div class="see-more">
+            <p class="section-title">Intercambio</p>
+            <p [routerLink]="['/timeline']">Ver más</p>
+        </div>
+        <div class="books">
+          <ion-list>
+          <ion-text>We r in Home</ion-text>
+          </ion-list>
+        </div>
+    </div>
+  
   </div>
 </ion-content>
