--- a/ionicbooks/src/app/tab/tab.page.html
+++ b/ionicbooks/src/app/tab/tab.page.html
@@ -6,7 +6,17 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
-      <ion-label>Home</ion-label>
+      <ion-label>Inicio</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="publish">
+      <ion-icon name="add-circle-outline"></ion-icon>
+      <ion-label>Publicar</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="profile">
+      <ion-icon name="person-outline"></ion-icon>
+      <ion-label>Perfil</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
