--- a/ionicbooks/src/app/login/login.page.html
+++ b/ionicbooks/src/app/login/login.page.html
@@ -4,11 +4,11 @@
         <form (submit)="logIn()">
             <p>Entra y conectate con otras mentes</p>
             <div class="inputs">
-                <input type="email" name="email" [(ngModel)]="user.email" placeholder="Email" required>
-                <input type="password" name="password" [(ngModel)]="user.password" placeholder="Contraseña" required
-                    minlength="6">
+                <ion-input type="email" name="email" [(ngModel)]="user.email" placeholder="Email" required></ion-input>
+                <ion-input type="password" name="password" [(ngModel)]="user.password" placeholder="Contraseña" required minlength="6"></ion-input>
+                    
             </div>
-            <button type="submit">Entrar</button>
+            <ion-button type="submit">Entrar</ion-button>
             <a [routerLink]="['/recuperar-password']">¿Olviaste la contraseña?</a>
         </form>
         <!-- <div class="error" *ngIf="error404">
